force-app/main/default/objects/SLA_Rule__c/SLA_Rule__c.object-meta.xml
<CustomObject>
    <label>SLA Rule</label>
    <nameField>
        <label>SLA Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>