force-app/main/default/objects/SLA_Rule__c/fields/Resolution_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Hours__c</fullName>
    <label>Resolution Time Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>