force-app/main/default/objects/SLA_Rule__c/fields/Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Hours__c</fullName>
    <label>Response Time Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>